# docs/swagger.json
@@ -87,6 +87,10 @@
     "Hospital": {
       "type": "object",
       "properties": {
+        "name": {
+          "type": "string",
+          "example": "hospital"
+        },
         "children": {
           "type": "object",
           "additionalProperties": {
@@ -101,6 +105,10 @@
     "Department": {
       "type": "object",
       "properties": {
+        "name": {
+          "type": "string",
+          "example": "department-ICU"
+        },
         "children": {
           "type": "object",
           "additionalProperties": {
@@ -115,6 +123,10 @@
     "Patient": {
       "type": "object",
       "properties": {
+        "name": {
+          "type": "string",
+          "example": "patient-39fd6a79-1791-4117-9d14-9a7b2118f930"
+        },
         "children": {
           "type": "object",
           "additionalProperties": {
@@ -134,6 +146,46 @@
         }
       }
     },
+    "AddDepartmentOrPatient": {
+      "type": "object",
+      "properties": {
+        "department": {
+          "type": "string",
+          "example": "ICU"
+        }
+      }
+    },
+    "AddMetric": {
+      "type": "object",
+      "properties": {
+        "department": {
+          "type": "string",
+          "example": "ICU"
+        },
+        "patient": {
+          "type": "string",
+          "example": "39fd6a79-1791-4117-9d14-9a7b2118f930"
+        },
+        "metric": {
+          "type": "string",
+          "example": "Heart Rate"
+        },
+        "unitType": {
+          "type": "string",
+          "example": "BPM"
+        }
+      },
+      "required": ["metric", "unitType"]
+    },
+    "CreatedResponse": {
+      "type": "object",
+      "properties": {
+        "created": {
+          "type": "string",
+          "example": "NICU"
+        }
+      }
+    },
     "Error": {
       "type": "object",
       "properties": {
@@ -149,5 +201,130 @@
       }
     }
   },
-  "paths": {}
+  "paths": {
+    "/summary": {
+      "get": {
+        "description": "Gets a summary object of the entire hospital",
+        "tags": ["Summary"],
+        "produces": ["application/json"],
+        "operationId": "summary",
+        "responses": {
+          "200": {
+            "description": "Summary Response",
+            "schema": {
+              "$ref": "#/definitions/Hospital"
+            }
+          },
+          "default": {
+            "description": "Error",
+            "schema": {
+              "$ref": "#/definitions/Error"
+            }
+          }
+        }
+      }
+    },
+    "/departments": {
+      "post": {
+        "description": "Adds a new department to the hospital",
+        "tags": ["Departments"],
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "operationId": "departments",
+        "parameters": [
+          {
+            "name": "AddDepartmentRequest",
+            "in": "body",
+            "description": "Add a department",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/AddDepartmentOrPatient"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/CreatedResponse"
+            }
+          },
+          "default": {
+            "description": "Error",
+            "schema": {
+              "$ref": "#/definitions/Error"
+            }
+          }
+        }
+      }
+    },
+    "/patients": {
+      "post": {
+        "description": "Adds a new patient to a department. Patient ID autogenerated",
+        "tags": ["Departments"],
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "operationId": "departments",
+        "parameters": [
+          {
+            "name": "AddPatientRequest",
+            "in": "body",
+            "description": "Add a patient",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/AddDepartmentOrPatient"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/CreatedResponse"
+            }
+          },
+          "default": {
+            "description": "Error",
+            "schema": {
+              "$ref": "#/definitions/Error"
+            }
+          }
+        }
+      }
+    },
+    "/metrics": {
+      "post": {
+        "description": "Adds a new metric to a patient, entire department, or entire hospital",
+        "tags": ["Departments"],
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "operationId": "departments",
+        "parameters": [
+          {
+            "name": "AddMetricRequest",
+            "in": "body",
+            "description": "Add a metric. To add to de",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/AddMetric"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/CreatedResponse"
+            }
+          },
+          "default": {
+            "description": "Error",
+            "schema": {
+              "$ref": "#/definitions/Error"
+            }
+          }
+        }
+      }
+    }
+  }
 }
