# model/department.go
@@ -1,8 +1,13 @@
 package model
 
-import "github.com/bcmendoza/pulse/utils"
+import (
+	"fmt"
+
+	"github.com/bcmendoza/pulse/utils"
+)
 
 type Department struct {
+	Name     string             `json:"name"`
 	Children map[string]Patient `json:"patients"`
 	Stream   Stream             `json:"stream"`
 }
@@ -12,6 +17,7 @@ func (h *Hospital) AddDepartment(name string) {
 	defer h.Unlock()
 
 	h.Children[name] = Department{
+		Name:     fmt.Sprintf("department-%s", name),
 		Children: make(map[string]Patient),
 		Stream: Stream{
 			Owner:    name,
